chore(open-source): sanitize secrets and harden public repo
- what: remove hardcoded credential usage, enforce env-based config, restore useful docs, add local env templates, and clean repo hygiene for OSS release

- why: prevent secret exposure, reduce accidental credential commits, and make agent/dev setup explicit with docker compose + .env.local

- files: memory_server.py, memory_mcp_direct.py, README.md, DOCS.md, CLAUDE.md, .gitignore, docker-compose.yml, frontend/src/integrations/supabase/client.ts, examples/.env.example, local/start_mcp_local.sh, plus new env/license/contributing docs

- risk: medium; startup now requires env vars (intentional), and history rewrite requires force-push/reclone workflows for collaborators

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,8 +1,8 @@
 # OpenAI API Key
-OPENAI_API_KEY=REDACTED_OPENAI_KEY
+OPENAI_API_KEY=your_openai_api_key_here
 
 # MindMirror Token
-MINDMIRROR_TOKEN=test_token_user2_isolation
+MINDMIRROR_TOKEN=your_mindmirror_token_here
 
 # MindMirror Server URL
-MINDMIRROR_URL=https://mcp-memory-uw0w.onrender.com/sse
+MINDMIRROR_URL=https://memory.usemindmirror.com/sse
