--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,8 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
+.env.private
 .envrc
 .venv
 env/
@@ -205,3 +207,18 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# OS/editor junk
+.DS_Store
+
+# Runtime outputs
+logs/
+*.log
+
+# Local package installs
+examples/node_modules/
+frontend/node_modules/
+
+# Historical/private artifacts
+archive/archive_old_files/*.db
+archive/archive_old_files/*_logs.txt
