--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
-version: '3.8'
-
 services:
   memory-system:
     build: .
     ports:
-      - "8000:8000"  # MCP Server (SSE endpoint)
-      - "8003:8003"  # Memory Server (API)
+      - "8000:8000"  # MCP endpoint
+      - "8001:8001"  # Memory API endpoint
     environment:
       - PORT=8000
-      - MEMORY_SERVER_PORT=8003
-      - MEMORY_API_BASE=http://localhost:8003
-    volumes:
-      - ./chroma_db:/app/chroma_db
-      - ./auth_tokens.db:/app/auth_tokens.db
-    command: >
-      sh -c "
-        python memory_server.py &
-        sleep 5 &&
-        mcp-proxy --host 0.0.0.0 --port 8000 python memory_mcp_server.py
-      "
+      - MEMORY_SERVER_PORT=8001
+      - MEMORY_API_BASE=http://localhost:8001
+      - DATABASE_URL=${DATABASE_URL}
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_PORT=${DB_PORT:-5432}
+      - DB_SSLMODE=${DB_SSLMODE:-require}
+    command: ["./start_direct.sh"]
