chore(repo): keep marketing spreadsheet local
- what: add spreadsheet path to .gitignore and remove tracked marketing workbook from git index\n- why: prevent internal planning artifact from being published in the OSS repo\n- files: .gitignore, docs/MindMirror_Marketing.xlsx\n- risk: low; file remains on local disk but is no longer versioned

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,6 @@ frontend/node_modules/
 # Historical/private artifacts
 archive/archive_old_files/*.db
 archive/archive_old_files/*_logs.txt
+
+# Local-only working docs
+/docs/MindMirror_Marketing.xlsx
